# babeltrace-from-jgalar

./: .gitignore  Makefile.am  configure.ac  test-muxer.c
cli/: babeltrace-cfg-cli-args.c  babeltrace-log.c  babeltrace.c
common/: common.c
compat/: compat_uuid.c
converter/: babeltrace-cfg-connect.c  babeltrace-cfg.c  babeltrace.c
doc/: Makefile.am
doc/api/: Doxyfile.in
doc/api/dox/: main-page.dox
doc/man/: Makefile.am  README.adoc  asciidoc-attrs.conf.in  asciidoc.conf  babeltrace-convert.1.txt  babeltrace-help.1.txt  babeltrace-list-plugins.1.txt  babeltrace-plugin-ctf.7.txt  babeltrace-plugin-filter-lttng-utils.debug-info.7.txt  babeltrace-plugin-filter-utils.mux.7.txt  babeltrace-plugin-filter-utils.muxer.7.txt  babeltrace-plugin-filter-utils.trimmer.7.txt  babeltrace-plugin-lttng-utils.7.txt  babeltrace-plugin-sink-ctf.fs.7.txt  babeltrace-plugin-sink-text.text.7.txt  babeltrace-plugin-sink-utils.dummy.7.txt  babeltrace-plugin-source-ctf.fs.7.txt  babeltrace-plugin-source-ctf.lttng-live.7.txt  babeltrace-plugin-text.7.txt  babeltrace-plugin-utils.7.txt  babeltrace-query.1.txt  babeltrace.1.txt  common-cmd-footer.txt  common-cmd-params-format.txt  common-cmd-plugin-path.txt  common-footer.txt  common-gen-options.txt
include/: Makefile.am
include/babeltrace/: babeltrace-internal.h  common-internal.h  endian-internal.h
include/babeltrace/compat/: utsname-internal.h
include/babeltrace/ctf-ir/: field-types.h  fields.h
include/babeltrace/ctf-writer/: serialize-internal.h
include/babeltrace/graph/: notification-inactivity.h
lib/: values.c
lib/ctf-ir/: field-types.c  fields.c  stream.c  trace.c
lib/ctf-writer/: serialize.c  writer.c
lib/plugin/: plugin-so.c
plugins/ctf/common/btr/: btr.c
plugins/ctf/common/metadata/: ast.h  decoder.c  decoder.h  visitor-generate-ir.c
plugins/ctf/common/notif-iter/: notif-iter.c
plugins/ctf/fs/: fs.c  metadata.c
plugins/ctf/lttng-live/: metadata.c
plugins/debug-info/: copy.c
plugins/libctfcopytrace/: ctfcopytrace.c
plugins/lttng-utils/: copy.c  plugin.c
plugins/utils/: plugin.c
plugins/utils/muxer/: muxer.c
tests/lib/: test_ctf_writer.c
tests/plugins/: test-utils-muxer.c
